# Mopopoly-deal

./: .gitignore  ANDROID_BUILD_PROMPT.md  NOTES.md  README.md  package-lock.json  package.json
.github/workflows/: android-emulator-test.yml  android.yml  build.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/mopopoly/deal/: HostFlowTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/mopopoly/deal/: MainActivity.kt  NodeBridge.kt  NodeProject.kt  NodeService.kt
android/app/src/main/res/drawable/: ic_stat_host.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/node-template/: mobile-main.js  package.json
public/: app.js  host.html  host.js  index.html  styles.css
scripts/: prepare-node-project.sh
src/: persistence.js  server.js
src/game/: cards.js  engine.js
test/: engine.test.js  integration.test.js
